# Gravity

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build_and_run.bash  build_and_run_tests.bash  run.bash
data/: config.j3x
data/systems/: example_system.j3x
include/: Background.h  Config.h  Engine.h  Graphics.h  Physics.h  Planet.h  ResourceManager.h  Star.h  UserInterface.h  Utils.h
include/graphics/: Animation.h  EffectGenerator.h  Explosion.h  Graphics.h  SpawnAnimation.h  UserInterface.h
include/objects/: AbstractCelestialBody.h  AbstractDrawableObject.h  AbstractPhysicalObject.h  Background.h  Explosion.h  Planet.h  Star.h
include/physics/: GravityEquation.h  Physics.h  RungeKuttaSolver.h
include/system/: Config.h  Engine.h  GravitySystemLoader.h  ResourceManager.h  UserInterface.h
include/utils/: Geometry.h  Numeric.h  Random.h  Utils.h
src/: Engine.cpp  Graphics.cpp  Physics.cpp  Planet.cpp  ResourceManager.cpp  UserInterface.cpp  Utils.cpp  main.cpp
src/graphics/: Animation.cpp  EffectGenerator.cpp  Explosion.cpp  Graphics.cpp  UserInterface.cpp
src/objects/: Background.cpp  Explosion.cpp  Planet.cpp  Star.cpp
src/physics/: Physics.cpp
src/system/: Engine.cpp  GravitySystemLoader.cpp  ResourceManager.cpp  UserInterface.cpp
src/utils/: Utils.cpp
test/: CMakeLists.txt  CMakeLists.txt.in
test/src/physics/: RungeKuttaSolverTest.cpp
test/src/utils/: GeometryTest.cpp  NumericTest.cpp
